<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/AvengersProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".avengers_profile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgTonyStark"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/tonystark"
                    android:layout_margin="20dp"/>

                <TextView
                    android:id="@+id/txtname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tony_stark"
                    android:layout_toEndOf="@+id/imgTonyStark"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/txtemail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tonystark_avengers_com"
                    android:layout_below="@+id/txtname"
                    android:layout_toEndOf="@id/imgTonyStark"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/txtphonenumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_111155555"
                    android:layout_toEndOf="@+id/imgTonyStark"
                    android:layout_below="@+id/txtemail"
                    android:layout_marginTop="15dp"
                    android:textSize="18sp"
                    android:textColor="#000000" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgSteveRogers"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/steverogers"
                    android:layout_margin="20dp"/>

                <TextView
                    android:id="@+id/txtNameSteve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/steve_rogers"
                    android:layout_toEndOf="@+id/imgSteveRogers"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/txtEmailSteve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/steverogers_avengers_com"
                    android:layout_below="@+id/txtNameSteve"
                    android:layout_toEndOf="@id/imgSteveRogers"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/txtPhoneNumberSteve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_222266666"
                    android:layout_toEndOf="@+id/imgSteveRogers"
                    android:layout_below="@+id/txtEmailSteve"
                    android:layout_marginTop="15dp"
                    android:textSize="18sp"
                    android:textColor="#000000" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgThor"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/thorimage"
                    android:layout_margin="20dp"/>

                <TextView
                    android:id="@+id/txtNameThor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/thor"
                    android:layout_toEndOf="@+id/imgThor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/txtEmailThor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thor_avenger_com"
                    android:layout_below="@+id/txtNameThor"
                    android:layout_toEndOf="@id/imgThor"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/txtPhoneNumberThor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_333377777"
                    android:layout_toEndOf="@+id/imgThor"
                    android:layout_below="@+id/txtEmailThor"
                    android:layout_marginTop="15dp"
                    android:textSize="18sp"
                    android:textColor="#000000" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgHulk"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/hulk"
                    android:layout_margin="20dp"/>

                <TextView
                    android:id="@+id/txtNameHulk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/hulk"
                    android:layout_toEndOf="@+id/imgHulk"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/txtEmailHulk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hulk_avengers_com"
                    android:layout_below="@+id/txtNameHulk"
                    android:layout_toEndOf="@id/imgHulk"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/txtPhoneNumberHulk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_444488888"
                    android:layout_toEndOf="@+id/imgHulk"
                    android:layout_below="@+id/txtEmailHulk"
                    android:layout_marginTop="15dp"
                    android:textSize="18sp"
                    android:textColor="#000000" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgBlackPanther"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/blackpanther"
                    android:layout_margin="20dp"/>

                <TextView
                    android:id="@+id/txtNameBlackPanther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/black_panther"
                    android:layout_toEndOf="@+id/imgBlackPanther"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/txtEmailBlackPanther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blackpanther_avengers_com"
                    android:layout_below="@+id/txtNameBlackPanther"
                    android:layout_toEndOf="@id/imgBlackPanther"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/txtPhoneNumberBlackPanther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_555599999"
                    android:layout_toEndOf="@+id/imgBlackPanther"
                    android:layout_below="@+id/txtEmailBlackPanther"
                    android:layout_marginTop="15dp"
                    android:textSize="18sp"
                    android:textColor="#000000" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgBlackWidow"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/blackwidow"
                    android:layout_margin="20dp"/>

                <TextView
                    android:id="@+id/txtNameBlackWidow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/black_widow"
                    android:layout_toEndOf="@+id/imgBlackWidow"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/txtEmailBlackWidow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blackwidow_avengers_com"
                    android:layout_below="@+id/txtNameBlackWidow"
                    android:layout_toEndOf="@id/imgBlackWidow"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/txtPhoneNumberBlackWidow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_666633333"
                    android:layout_toEndOf="@+id/imgBlackWidow"
                    android:layout_below="@+id/txtEmailBlackWidow"
                    android:layout_marginTop="15dp"
                    android:textSize="18sp"
                    android:textColor="#000000" />
            </RelativeLayout>
        </LinearLayout>
</ScrollView>